tests/errors/tc_mem_free_stack.lx
@module "main"

pub const main -> fn () int {
    let x: int = 5;
    let p: *int = &x;
    free(&x);
    return 0;
}
